[gd_scene load_steps=9 format=2]

[ext_resource path="res://Juego/Naves/Estaciones/Rele/agujero.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/Rele/ReleMasa.gd" type="Script" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/Rele/agujero.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "activada"
length = 2.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1.1, 1.6, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.737255, 0.996078, 0.8 ), Color( 0.737255, 0.996078, 0.92549, 0.8 ), Color( 0.996078, 0.980392, 0.737255, 0.8 ), Color( 0.737255, 0.768627, 0.996078, 0.8 ), Color( 0.835294, 0.996078, 0.737255, 0.8 ), Color( 0.866667, 0.737255, 0.996078, 0.8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0901961, 0.117647, 0.317647, 0.917647 ), Color( 0.316406, 0.787712, 1, 1 ), Color( 1, 1, 1, 0.62 ), Color( 0.0901961, 0.117647, 0.317647, 0.917647 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite3:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -1440.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.979492, 0.344353, 0.344353, 0.827451 ), Color( 0.98, 0.35, 0.58, 0 ), Color( 0.980392, 0.345098, 0.580392, 0.827451 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer2D:stream")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AudioStreamPlayer2D:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Node2D/Sprite3:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "spawn"

[sub_resource type="Animation" id=4]
resource_name = "super_activada"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.737255, 0.996078, 1 ), Color( 0.737255, 0.996078, 0.92549, 1 ), Color( 0.996078, 0.980392, 0.737255, 1 ), Color( 0.737255, 0.768627, 0.996078, 1 ), Color( 0.835294, 0.996078, 0.737255, 1 ), Color( 0.866667, 0.737255, 0.996078, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Sprite2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0901961, 0.117647, 0.317647, 0.917647 ), Color( 0.316406, 0.787712, 1, 1 ), Color( 1, 1, 1, 0.62 ), Color( 0.0901961, 0.117647, 0.317647, 0.917647 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Sprite3:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -1440.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Sprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node2D/Sprite2:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Node2D/Sprite3:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 130.585

[node name="ReleMasa" type="Node2D" groups=[
"miniMap",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite3" type="Sprite" parent="Node2D"]
modulate = Color( 0.979492, 0.344353, 0.344353, 0.827451 )
scale = Vector2( 2, 1 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Node2D"]
modulate = Color( 0.0901961, 0.117647, 0.317647, 0.917647 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Node2D"]
modulate = Color( 0.866667, 0.737255, 0.996078, 0.8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
anims/activada = SubResource( 1 )
anims/default = SubResource( 2 )
anims/spawn = SubResource( 3 )
anims/super_activada = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.55
attenuation = 0.07966
bus = "SFX"

[node name="DetectorPlayer" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorPlayer"]
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="DetectorPlayer" to="." method="_on_DetectorPlayer_body_entered"]
